--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@iconify/vue": "^4.3.0",
+    "@tailwindcss/vite": "^4.0.9",
+    "mongodb": "^6.13.1",
     "nuxt": "^3.15.4",
+    "tailwindcss": "^4.0.9",
     "vue": "latest",
     "vue-router": "latest"
   }
