--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tailwindcss/vite": "^4.0.9",
     "mongodb": "^6.13.1",
     "nuxt": "^3.15.4",
+    "swiper": "^11.2.4",
     "tailwindcss": "^4.0.9",
     "vue": "latest",
     "vue-router": "latest"
