--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "swiper": "^11.2.4",
     "tailwindcss": "^4.0.9",
     "vue": "latest",
-    "vue-router": "latest"
+    "vue-router": "latest",
+    "vue3-toastify": "^0.2.8"
   }
 }
