--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
   },
   "dependencies": {
     "@iconify/vue": "^4.3.0",
+    "@pinia/nuxt": "^0.10.1",
     "@tailwindcss/vite": "^4.0.9",
     "mongodb": "^6.13.1",
     "nuxt": "^3.15.4",
+    "sweetalert2": "^11.17.2",
     "swiper": "^11.2.4",
     "tailwindcss": "^4.0.9",
     "vue": "latest",
     "vue-router": "latest",
+    "vue-slider-component": "^3.2.24",
     "vue3-toastify": "^0.2.8"
   }
 }
