--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@iconify/vue": "^4.3.0",
     "@pinia/nuxt": "^0.10.1",
     "@tailwindcss/vite": "^4.0.9",
-    "mongodb": "^6.13.1",
+    "bcryptjs": "^3.0.2",
+    "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.14.0",
     "nuxt": "^3.15.4",
     "sweetalert2": "^11.17.2",
     "swiper": "^11.2.4",
