--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "@iconify/vue": "^4.3.0",
     "@pinia/nuxt": "^0.10.1",
     "@tailwindcss/vite": "^4.0.9",
+    "bcrypt": "^5.1.1",
     "bcryptjs": "^3.0.2",
+    "express-rate-limit": "^7.5.0",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.14.0",
+    "mongoose": "^8.11.0",
     "nuxt": "^3.15.4",
     "sweetalert2": "^11.17.2",
     "swiper": "^11.2.4",
@@ -24,5 +27,9 @@
     "vue-router": "latest",
     "vue-slider-component": "^3.2.24",
     "vue3-toastify": "^0.2.8"
+  },
+  "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
+    "@types/jsonwebtoken": "^9.0.9"
   }
 }
