--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@iconify/vue": "^4.3.0",
     "@pinia/nuxt": "^0.10.1",
     "@tailwindcss/vite": "^4.0.9",
+    "axios": "^1.8.1",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^3.0.2",
-    "express-rate-limit": "^7.5.0",
+    "form-data": "^4.0.2",
     "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
     "mongodb": "^6.14.0",
     "mongoose": "^8.11.0",
     "nuxt": "^3.15.4",
