--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bcrypt": "^5.1.1",
     "bcryptjs": "^3.0.2",
     "form-data": "^4.0.2",
+    "ioredis": "^5.6.0",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
     "mongodb": "^6.14.0",
