--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@aws-sdk/credential-providers": "^3.778.0",
     "@iconify/vue": "^4.3.0",
     "@pinia/nuxt": "^0.10.1",
     "@tailwindcss/vite": "^4.0.9",
