--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@pinia/nuxt": "^0.10.1",
     "@tailwindcss/vite": "^4.0.9",
     "@vercel/analytics": "^1.5.0",
+    "aws-sdk": "^2.1692.0",
     "axios": "^1.8.1",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^3.0.2",
