--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "@vercel/analytics": "^1.5.0",
     "aws-sdk": "^2.1692.0",
     "axios": "^1.8.1",
-    "bcrypt": "^5.1.1",
     "bcryptjs": "^3.0.2",
     "form-data": "^4.0.2",
     "ioredis": "^5.6.0",
@@ -36,6 +35,7 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/bcryptjs": "^2.4.6",
     "@types/jsonwebtoken": "^9.0.9",
     "mock-aws-s3": "^4.0.2"
   }
