--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@vercel/analytics": "^1.5.0",
     "aws-sdk": "^2.1692.0",
     "axios": "^1.8.1",
+    "bcrypt": "^5.1.1",
     "bcryptjs": "^3.0.2",
     "form-data": "^4.0.2",
     "ioredis": "^5.6.0",
